# halphi

./: .gitignore  halphi.cabal
src/: Main.hs  Trie.hs
