name: halphi
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: array -any, base -any, hashable -any, hashmap -any,
               parallel -any
stability:
homepage:
package-url:
bug-reports:
synopsis: Haskell Port of Kenny Hopkins/Steve AJ "the ox" Oxley/Siggy's Scrabble AI (C Version)
description: .
category:
author:
tested-with:
data-files: /Users/neural/Coding/halphi/dictionary.txt
data-dir: ""
extra-source-files:
extra-tmp-files:
 
executable: halphi
main-is: Main.hs
buildable: True
build-tools:
cpp-options:
cc-options:
ld-options:
pkgconfig-depends:
frameworks:
c-sources:
extensions:
extra-libraries:
extra-lib-dirs:
includes:
install-includes:
include-dirs:
hs-source-dirs: src
other-modules:
ghc-prof-options:
ghc-shared-options:
ghc-options:
hugs-options:
nhc98-options:
jhc-options: